--- a/ghxuly.html
+++ b/ghxuly.html
@@ -141,8 +141,8 @@
 </div>
   <div id="banner">
     <div id="profile" class="profile-info">
-      <img src="https://media.discordapp.net/attachments/916425334021296139/1112172965530964050/IMG-20230528-WA0000.jpg?width=452&height=452" alt="Profile Image">
-      <h1>Schmock</h1>
+      <img src="https://strich.org/images/ghxuly.jpg?width=452&height=452" alt="Profile Image">
+      <h1>GHXULY</h1>
     </div>
   </div>
   <div id="links">
