--- a/ghxuly.html
+++ b/ghxuly.html
@@ -17,7 +17,7 @@
       position: relative;
     }
     #banner {
-      background-image: url("https://i.scdn.co/image/ab67618600001016b1851d17eb1cc658589062d5");
+      background-image: url("https://garden.spoonflower.com/c/13653066/p/f/m/2ew2IlKxO3d7zoMLO3NiUxf6MkJT7aeURreXyo89kPIiZJSXwkA5mAE/Solid%20nero%20grey.jpg");
       background-color: #222;
       padding: 20px;
       text-align: center;
