--- a/ghxuly.html
+++ b/ghxuly.html
@@ -17,7 +17,7 @@ background: linear-gradient(0deg, rgba(0,0,0,1) 48%, rgba(33,33,33,1) 100%);
       position: relative;
     }
     #banner {
-      background-image: url("https://garden.spoonflower.com/c/13653066/p/f/m/2ew2IlKxO3d7zoMLO3NiUxf6MkJT7aeURreXyo89kPIiZJSXwkA5mAE/Solid%20nero%20grey.jpg");
+      background-image: url("https://strich.org/images/banner.jpg");
       background-color: #222;
       padding: 20px;
       text-align: center;
