--- a/ghxuly.html
+++ b/ghxuly.html
@@ -55,7 +55,7 @@ background: linear-gradient(0deg, rgba(0,0,0,1) 100%, rgba(33,33,33,1) 100%);
   padding: 10px 20px;
   margin: 10px auto;
   border-radius: 5px;
-  outline: 2px solid black;
+  outline: 2px solid white;
   border-color: #ffffff;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
   display: flex; /* Use flexbox for layout */
