--- a/ghxuly.html
+++ b/ghxuly.html
@@ -33,6 +33,7 @@ background: linear-gradient(0deg, rgba(0,0,0,1) 100%, rgba(33,33,33,1) 100%);
       height: 120px;
       border-radius: 50%;
       margin-right: 10px;
+      outline: 2px solid white;
     }
     #profile h1 {
       font-size: 24px;
