--- a/ghxuly.html
+++ b/ghxuly.html
@@ -139,15 +139,19 @@ background: linear-gradient(0deg, rgba(0,0,0,1) 100%, rgba(33,33,33,1) 100%);
     </div>
   </div>
   <div id="links">
-    <a class="link-button" href="https://open.spotify.com/artist/00UL27CiQhemd3BmIK8cDE">
+<a class="link-button" href="https://open.spotify.com/artist/00UL27CiQhemd3BmIK8cDE">
   <img src="https://strich.org/images/spotify-logo.png" alt="Icon" class="button-icon">
   <span class="button-text">SPOTIFY</span>
 </a>
-<a class="link-button" href="https://www.instagram.com/schmendrickkk/">
+<a class="link-button" href="https://www.instagram.com/gh0ulys_crypt/">
   <img src="https://strich.org/images/insta-logo.png" alt="Icon" class="button-icon">
-  <span class="button-text">INSTAGRAM</span>
+  <span class="button-text">INSTAGRAM - MUSIC</span>
 </a>
-    <a class="link-button" href="https://www.youtube.com/@schmock3183">
+<a class="link-button" href="https://www.instagram.com/gh0ulys_gallery/">
+  <img src="https://strich.org/images/insta-logo.png" alt="Icon" class="button-icon">
+  <span class="button-text">INSTAGRAM - GALLERY</span>
+</a>
+<a class="link-button" href="https://www.youtube.com/@schmock3183">
   <img src="https://strich.org/images/youtube-logo.png" alt="Icon" class="button-icon">
   <span class="button-text">YOUTUBE</span>
 </a>
