--- a/ghxuly.html
+++ b/ghxuly.html
@@ -143,13 +143,13 @@ background: linear-gradient(0deg, rgba(0,0,0,1) 100%, rgba(33,33,33,1) 100%);
   <img src="https://strich.org/images/spotify-logo.png" alt="Icon" class="button-icon">
   <span class="button-text">SPOTIFY</span>
 </a>
-<a class="link-button" href="https://www.instagram.com/gh0ulys_crypt/">
+<a class="link-button" href="https://www.instagram.com/gh0uly.flp/">
   <img src="https://strich.org/images/insta-logo.png" alt="Icon" class="button-icon">
-  <span class="button-text">INSTAGRAM - MUSIC</span>
+  <span class="button-text">INSTAGRAM¹</span>
 </a>
 <a class="link-button" href="https://www.instagram.com/gh0ulys_gallery/">
   <img src="https://strich.org/images/insta-logo.png" alt="Icon" class="button-icon">
-  <span class="button-text">INSTAGRAM - GALLERY</span>
+  <span class="button-text">INSTAGRAM²</span>
 </a>
 <a class="link-button" href="https://www.youtube.com/@schmock3183">
   <img src="https://strich.org/images/youtube-logo.png" alt="Icon" class="button-icon">
