--- a/ani.html
+++ b/ani.html
@@ -18,7 +18,8 @@
   <div id="canvas-container"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="https://cdn.rawgit.com/mrdoob/three.js/dev/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/js/loaders/GLTFLoader.js"></script>
+
   <script>
     let scene, camera, renderer;
     let mixer;
