--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music File Waveform Viewer</title>
+    <title>Live Audio Waveform Viewer</title>
     <style>
         body, html {
             height: 100%;
@@ -50,7 +50,7 @@
     <div id="waveform"></div>
     <div class="audio-controls">
         <button id="playPause">Play</button>
-        <input type="range" id="seekbar" value="0" max="100" />
+        <input type="range" id="seekbar" value="0" max="100" step="0.1" style="width: 60%;">
     </div>
     <script src="https://unpkg.com/wavesurfer.js"></script>
     <script>
@@ -63,7 +63,8 @@
             container: waveformContainer,
             waveColor: 'white',
             progressColor: 'gray',
-            cursorColor: 'white'
+            cursorColor: 'white',
+            barWidth: 2
         });
 
         fileInput.addEventListener('change', function(event) {
@@ -89,7 +90,15 @@
             });
 
             wavesurfer.on('audioprocess', function() {
-                seekbar.value = (wavesurfer.getCurrentTime() / wavesurfer.getDuration()) * 100;
+                if (!seekbar.isDragging) {
+                    seekbar.value = (wavesurfer.getCurrentTime() / wavesurfer.getDuration()) * 100;
+                }
+            });
+
+            wavesurfer.on('seek', function () {
+                if (!wavesurfer.isPlaying()) {
+                    seekbar.value = (wavesurfer.getCurrentTime() / wavesurfer.getDuration()) * 100;
+                }
             });
         });
     </script>
