--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        font-family: Arial, sans-serif;
+        color: white;
     }
-    canvas {
-        width: 100%;
-        height: 100%;
+    #canvas {
+        width: 600px;  /* Set the width of the canvas */
+        height: 300px; /* Set the height of the canvas */
+        background: black;
     }
     .controls {
         position: fixed;
@@ -71,7 +74,7 @@
         animationId = requestAnimationFrame(animate);
         analyser.getByteFrequencyData(dataArray);
 
-        ctx.fillStyle = 'rgb(0, 0, 0)';
+        ctx.fillStyle = 'rgb(0, 0, 0)';  // Background Color of Canvas
         ctx.fillRect(0, 0, canvas.width, canvas.height);
 
         let barWidth = (canvas.width / bufferLength) * 2.5;
@@ -81,7 +84,7 @@
         for (let i = 0; i < bufferLength; i++) {
             barHeight = dataArray[i] * 2;
 
-            ctx.fillStyle = 'rgb(' + (barHeight+100) + ', 50, 50)';
+            ctx.fillStyle = 'rgb(255, 255, 255)';  // Color of the bars
             ctx.fillRect(x, canvas.height - barHeight / 2, barWidth, barHeight / 2);
 
             x += barWidth + 1;
