--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             max-width: 800px;
             margin: 5% auto;
             padding: 20px;
-            background-color: #2D3748; /* Dark Background */
+            background-color: #161616; /* Dark Background */
             border-radius: 20px;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
         }
@@ -40,7 +40,7 @@
             border-radius: 15px;
             display: flex;
             justify-content: center;
-            background-color: #2D3748;
+            background-color: #161616;
             transition: background-color 0.3s;
         }
 
@@ -56,10 +56,10 @@
         }
 .searchBar:hover {
             cursor: pointer;
-            background-color: #2C3E50; /* On hover, darken a bit */
+            background-color: #3D3D3D; /* On hover, darken a bit */
         }
         .entry {
-            background-color: #4A5568; /* Slightly lighter than the container for contrast */
+            background-color: #3D3D3D; /* Slightly lighter than the container for contrast */
             margin: 20px 0;
             padding: 20px;
             border-radius: 15px;
@@ -232,7 +232,7 @@ body::-ms-scrollbar {
         <div class="nav-logo">Strich</div>
         <div class="nav-items">
             <div class="nav-item" onclick="window.location.href='https://strich.org'">Home</div>
-            <div class="nav-item" onclick="window.location.href='https://discord.gg/HWKpn8NT4R'">Discord</div>
+            <div class="nav-item" onclick="window.location.href='https://discord.gg/y8uV4nXuBj'">Discord</div>
             <div class="nav-item" onclick="">Status</div>
         </div>
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
