--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             border: 1px solid #718096;
             outline: none;
             color: #E2E8F0;
-            background-color: #4A5568;
+            background-color: #3D3D3D;
         }
 .searchBar:hover {
             cursor: pointer;
