--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             width: 80%;
             border-radius: 15px;
             transition: background-color 0.3s;
-            border: 1px solid #718096;
+            border: 1px solid #BFBFBF;
             outline: none;
             color: #E2E8F0;
             background-color: #3D3D3D;
@@ -63,7 +63,7 @@
             margin: 20px 0;
             padding: 20px;
             border-radius: 15px;
-            border: 1px solid #718096;
+            border: 1px solid #BFBFBF;
             transition: background-color 0.3s;
         }
 
